Bug 1075294 - Object.seal() should return its argument with no conversion when the argument is a primitive value. r=till