js/src/builtin/Object.cpp
@@ -845,7 +845,7 @@ obj_keys(JSContext *cx, unsigned argc, Value *vp)
 {
     CallArgs args = CallArgsFromVp(argc, vp);
 
-    // steps 1-2
+    // Steps 1-2.
     RootedObject obj(cx);
     if (!GetFirstArgumentAsObject(cx, args, "Object.keys", &obj))
         return false;
@@ -873,7 +873,7 @@ obj_keys(JSContext *cx, unsigned argc, Value *vp)
         namelist.infallibleAppend(StringValue(str));
     }
 
-    // step 11
+    // Step 11.
     JS_ASSERT(props.length() <= UINT32_MAX);
     JSObject *aobj = NewDenseCopiedArray(cx, uint32_t(namelist.length()), namelist.begin());
     if (!aobj)
@@ -919,17 +919,17 @@ namespace js {
 bool
 GetOwnPropertyKeys(JSContext *cx, const JS::CallArgs &args, unsigned flags)
 {
-    // steps 1-2
+    // Steps 1-2.
     RootedObject obj(cx, ToObject(cx, args.get(0)));
     if (!obj)
         return false;
 
-    // steps 3-10
+    // Steps 3-10.
     AutoIdVector keys(cx);
     if (!GetPropertyNames(cx, obj, flags, &keys))
         return false;
 
-    // step 11
+    // Step 11.
     AutoValueVector vals(cx);
     if (!vals.resize(keys.length()))
         return false;
@@ -1021,10 +1021,10 @@ obj_isExtensible(JSContext *cx, unsigned argc, Value *vp)
 {
     CallArgs args = CallArgsFromVp(argc, vp);
 
-    // step 1
+    // Step 1.
     bool extensible = false;
 
-    // step 2
+    // Step 2.
     if (args.get(0).isObject()) {
         RootedObject obj(cx, &args.get(0).toObject());
         if (!JSObject::isExtensible(cx, obj, &extensible))
@@ -1041,11 +1041,11 @@ obj_preventExtensions(JSContext *cx, unsigned argc, Value *vp)
     CallArgs args = CallArgsFromVp(argc, vp);
     args.rval().set(args.get(0));
 
-    // step 1
+    // Step 1.
     if (!args.get(0).isObject())
         return true;
 
-    // steps 2-5
+    // Steps 2-5.
     RootedObject obj(cx, &args.get(0).toObject());
 
     return JSObject::preventExtensions(cx, obj);
@@ -1070,10 +1070,10 @@ obj_isFrozen(JSContext *cx, unsigned argc, Value *vp)
 {
     CallArgs args = CallArgsFromVp(argc, vp);
 
-    // step 1
+    // Step 1.
     bool frozen = true;
 
-    // step 2
+    // Step 2.
     if (args.get(0).isObject()) {
         RootedObject obj(cx, &args.get(0).toObject());
         if (!JSObject::isFrozen(cx, obj, &frozen))
@@ -1083,16 +1083,19 @@ obj_isFrozen(JSContext *cx, unsigned argc, Value *vp)
     return true;
 }
 
+// ES6 draft rev27 (2014/08/24) 19.1.2.17 Object.seal(O)
 static bool
 obj_seal(JSContext *cx, unsigned argc, Value *vp)
 {
     CallArgs args = CallArgsFromVp(argc, vp);
-    RootedObject obj(cx);
-    if (!GetFirstArgumentAsObject(cx, args, "Object.seal", &obj))
-        return false;
+    args.rval().set(args.get(0));
 
-    args.rval().setObject(*obj);
+    // Step 1.
+    if (!args.get(0).isObject())
+        return true;
 
+    // Steps 2-5.
+    RootedObject obj(cx, &args.get(0).toObject());
     return JSObject::seal(cx, obj);
 }
 
@@ -1102,10 +1105,10 @@ obj_isSealed(JSContext *cx, unsigned argc, Value *vp)
 {
     CallArgs args = CallArgsFromVp(argc, vp);
 
-    // step 1
+    // Step 1.
     bool sealed = true;
 
-    // step 2
+    // Step 2.
     if (args.get(0).isObject()) {
         RootedObject obj(cx, &args.get(0).toObject());
         if (!JSObject::isSealed(cx, obj, &sealed))
